@@ -44,13 +44,13 @@ author             = "Rocky Bernstein"
 author_email       = "rocky@gnu.org"
 ftp_url            = None
 install_requires   = ['columnize >= 0.3.9',
-                      'nose>=1.0',
+                      'nose>=1.0.0, <= 1.3.7',
                       'pyficache >= 1.0.0',
                       'pygments  >= 2.2.0',
-                      'spark_parser >= 1.8.5, <1.9.0',
+                      'spark_parser >= 1.8.7, <1.9.0',
                       'tracer >= 0.3.2',
-                      'uncompyle6 >= 3.1.1',
-                      'xdis >= 3.8.0'
+                      'uncompyle6 >= 3.2.4',
+                      'xdis >= 3.8.8',
                       ]
 license            = 'GPL3'
 mailing_list       = 'python-debugger@googlegroups.com'
