@@ -1,3 +1,7 @@
+trepan 0.8.8 2018-10-27 9x7 release
+
+- help doc changes
+
 trepan 0.8.7 2018-04-16
 - gdb "backtrace" negative count documented and supported
 - add -d, --deparse and --source options on backtrace command
